--- a/main.css
+++ b/main.css
@@ -1,8 +1,102 @@
+body{
+    background-color: white;
+    color:white;
+}
+.time{
+    text-align:center;
+    font-size: 60px;
+}
+.info,
+.inputToDo,
+ul{
+    text-align:center;
+    font-size: 40px;
+   
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+h1,h4{
+    
+    transition: color 1s ease-in-out;
+}
+.top {
+	height:70px;
+	display: flex;
+	align-items:center;	}
+
+
 .form,
 .info{
     display: none;
+    text-align: center;
 }
 
 .showing {
     display: block;
+    
+}
+
+@keyframes fadeIn{
+    from{
+        opacity:0;
+    }
+    to{
+        opacity:1;
+    }
+}
+
+.backgroundImage{
+    position:absolute;
+    background-size: cover;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index:-1;
+    animation: fadeIn 0.5s linear;
+}
+
+.textBoxToDo{
+    color:white;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: solid;
+    background: transparent;
+    width:500px; 
+	height:100px; 
+    resize:none;
+}
+.textBoxInfo{
+    color:white;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: solid;
+    background: transparent;
+    width:300px; 
+	height:100px; 
+    resize:none;
+}
+.textBox{
+    color:white;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: solid;
+    background: transparent;
+    width:500px; 
+	height:100px; 
+    resize:none;
+}
+
+
+
+input::placeholder{
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    font
 }
